--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div style="width: 100%; height: 1000px;">
     </div>
 
-    <div class="wow row">
+    <div class="row">
         <div class="col-lg-2">
             <div id="test-circle"></div>
         </div>
